# onyx

./: CMakeLists.txt  README.md
include/ilc/: ast_generator.h  code_highlight.h  const.h  diagnostic_printer.h  driver.h  file_system.h  helpers.h  jit.h  jit_driver.h  linker_argument_builder.h  linker_finder.h  linker_invoker.h  linker_kind.h  linker_util.h  output_generator.h  output_generator_result.h  util.h
include/ilc/passes/ionir/: ionir_directive_processor_pass.h
src/: ast_printer.cpp  code_highlight.cpp  console_color.cpp  const.cpp  diagnostic_printer.cpp  driver.cpp  file_system.cpp  ilc.cpp  jit_driver.cpp  linker_finder.cpp  linker_invoker.cpp  util.cpp
src/passes/ionir/: ionir_directive_processor_pass.cpp  ionir_logger_pass.cpp
src/passes/ionlang/: ionlang_logger_pass.cpp
